--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="assets/css/styles.css">
-
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
     <!-- =====BOX ICONS===== -->
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
@@ -147,7 +147,7 @@
         <!--===== CONTACT =====-->
         <section class="contact section" id="contact">
             <h2 class="section-title">Contact</h2>
-
+            <div><p class="contact__mail">This is my mail : achraflarousse@gmail.com</p></div>
             <div class="contact__container bd-grid">
                 <form action="" class="contact__form">
                     <input type="text" placeholder="Name" class="contact__input">
