--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <form action="" class="contact__form">
                     <input type="text" placeholder="Name" class="contact__input">
                     <input type="mail" placeholder="Email" class="contact__input">
-                    <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
+                    <textarea name="" id="" placeholder="Body" cols="0" rows="10" class="contact__input"></textarea>
                     <input type="button" value="Send" class="contact__button button">
                 </form>
             </div>
