--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
         </nav>
     </header>
 
-    <main class="l-main">
-        <!--===== HOME =====-->
+     <!--===== HOME =====-->
         <section class="home bd-grid" id="home">
             <div class="home__data">
-                <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Arous Achraf</span><br> Second
+                <h1 class="home__title">Hi,<br>I am <span class="home__title-color">Arous Achraf</span><br> Second
                     Year<br> Computer Sciences</h1>
 
-                <a href="#contact" class="button">Contact</a>
+                <a href="#contact" class="button">Contact</a> 
+                <a href="https://drive.google.com/file/d/1FF5A0-PiZ59HBwVzCF5Tf28CDzGKEsfq/view?usp=sharing" class="button">See Resume</a>
             </div>
             <div class="home__img">
 
@@ -74,12 +74,14 @@
                 </div>
 
                 <div>
-                    <h2 class="about__subtitle">I'am Achraf</h2>
+                    <h2 class="about__subtitle">I am Achraf</h2>
                     <p class="about__text">I am a computer science student with a particular focus on software
                         engineering. Passionate, attentive and dedicated, qualities that I use in everything I do.</p>
                 </div>
             </div>
         </section>
+
+
 
 
         <!--===== SKILLS =====-->
