--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <a href="https://www.linkedin.com/in/arous-achraf-5343011b5/" class="footer__icon"><i
                     class='bx bxl-linkedin'></i></a>
         </div>
-        <p class="footer__copy">&#169; Bedimcode. All rigths reserved</p>
+        <p class="footer__copy">&#169; LAROUSSE. All rigths reserved</p>
     </footer>
 
 
