--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                     Year<br> Computer Sciences</h1>
 
                 <a href="#contact" class="button">Contact</a> 
-                <a href="https://drive.google.com/file/d/1FF5A0-PiZ59HBwVzCF5Tf28CDzGKEsfq/view?usp=sharing" class="button">See Resume</a>
+                <a href="https://drive.google.com/file/d/1nwXxJOzD1hS8IdOzjXI9i8VBII9Nh1Qg/view?usp=sharing" class="button">See Resume</a>
             </div>
             <div class="home__img">
 
                 <a href="" class="work__img">
-                    <img src="assets/img/about.jpg" alt="">
+                    <img src="assets/img/alarousse v 1.0.jpeg" alt="">
 
             </div>
 
@@ -70,7 +70,7 @@
 
             <div class="about__container bd-grid">
                 <div class="about__img">
-                    <img src="assets/img/about.jpg" alt="">
+                    <img src="assets/img/larousse v 1.0.jpeg" alt="">
                 </div>
 
                 <div>
