--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     Year<br> Computer Sciences</h1>
 
                 <a href="#contact" class="button">Contact</a> 
-                <a href="https://drive.google.com/file/d/1fJKX0JlWWNgHn580qrV4zotSvhJTVnk5/view?usp=sharing" class="button">See Resume</a>
+                <a href="https://www.canva.com/design/DAEw1ghVpTE/byCMEXK3ILjPBZam_R4lSQ/view?utm_content=DAEw1ghVpTE&utm_campaign=designshare&utm_medium=link&utm_source=publishpresent" class="button">See Resume</a>
             </div>
             <div class="home__img">
 
